--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Leandro Parice",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "fastify": "^4.17.0"
   },
   "devDependencies": {
