--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel": "vercel dev"
   },
   "keywords": [],
   "author": "Leandro Parice",
@@ -15,6 +16,7 @@
     "fastify": "^4.17.0"
   },
   "devDependencies": {
+    "@vercel/node": "^2.14.3",
     "nodemon": "^2.0.22"
   }
 }
